fix overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #e28b8e;
+    overflow-x: hidden;
 }
 
 button {
